RaeumeTab im AdminDashboard entfernt Email-Versand für Registrierung, Deregistrierung sowie bei Email-Änderung. Mail-Templates für Versand Nutzer Entity erweitert für Email-Wechsel All Tests running! Slot-Zeit Validierung vs Veranstaltung